# docchex

./: .copier-answers.yml  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  index.html  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md  config.yml
.github/workflows/: ci.yml  sponsors.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml  ty.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: index.html
credits/: index.html
docs/: coverage.md  evaluation.md  setup.md
docs/.overrides/partials/: comments.html
docs/reference/: api.md
evals/: runner.py
evals/cases/: required_section.yaml  word_count.yaml
evals/data/documents/: doc_no_intro.txt  doc_with_intro.txt  long_doc.txt  short_doc.txt
evals/data/rules/: standard_rules.yaml
evals/results/: latest.json
evaluation/: index.html
license/: index.html
reference/api/: index.html
reports/: coverage.json
scripts/: gen_credits.py  make.py
setup/: index.html
src/docchex/: __init__.py  __main__.py
src/docchex/_internal/: cli.py  debug.py  models.py
src/docchex/_internal/evaluation/: ai.py  engine.py
src/docchex/_internal/llm/: base.py
src/docchex/_internal/llm/providers/: anthropic.py  ollama.py  openai.py
src/docchex/_internal/parsing/: base.py  pdf.py  text.py
src/docchex/_internal/rules/: base.py  loader.py
src/docchex/_internal/rules/builtin/: ai_check.py  required_section.py  word_count.py
src/docchex/_internal/rules/presets/: __init__.py  academic_paper.yaml  custom_template.yaml  letter_email.yaml  tech_report.yaml
tests/: __init__.py  test_ai_rules.py  test_api.py  test_cli.py  test_engine.py  test_models.py  test_parsing.py  test_presets.py  test_rules.py
